# medivox

./: .gitignore  README.md
data/: sample-01.txt
engine/: benchmark_transcription.py  glossary.txt  mypy.ini  test_streaming_transcription.py
engine/medivox_engine/: config.py  glossary.py  main.py  transcription.py
shim/: mypy.ini  requirements.txt
shim-dotnet/: Medivox.Shim.sln  README.md
shim-dotnet/installer/: medivox-shim.iss
shim-dotnet/src/Medivox.Shim/: EngineClient.cs  GlobalHotkey.cs  Logging.cs  Medivox.Shim.csproj  Program.cs  Recorder.cs  ShimConfig.cs  TextInjector.cs  TrayApplicationContext.cs
shim-macos/: Cargo.toml  README.md  make-app.sh
shim-macos/bundle/: Info.plist
shim-macos/src/: client.rs  config.rs  inject.rs  logging.rs  main.rs  recorder.rs  transcription_flow.rs  tray.rs
shim-rust/: Cargo.toml  README.md
shim-rust/src/: client.rs  config.rs  inject.rs  logging.rs  main.rs  recorder.rs  transcription_flow.rs  tray.rs
shim/medivox_shim/: audio.py  client.py  config.py  hotkey.py  inject.py  logging_config.py  main.py  tray.py
